syntax = "proto3";

package protobuf.pb.mem;

option go_package = "github.com/micro-in-cn/platform-web/assembly-line/protobuf/go/mem/mem";

import "basic/error.proto";
import "google/protobuf/timestamp.proto";

message MemoryStat {
    google.protobuf.Timestamp timestamp = 1;
    double activeBytes = 2;
    double compressedBytes = 3;
    double inactiveBytes = 4;
    double wiredBytes = 5;
    double freeBytes = 6;
    double swappedInBytesTotal = 7;
    double swappedOutBytesTotal = 8;
    double totalBytes = 9;
}

message MemRequest {
    google.protobuf.Timestamp timestamp = 1;
    string IP = 2;
    string nodeName = 3;
    repeated MemoryStat memoryStat = 4;
}

message MemResponse {
    basic.Error error = 1;
}

service MemService {
    rpc PushMemoryStat (MemRequest) returns (MemResponse) {
    }
}